@@ -1893,3 +1893,24 @@ $chips-close-color: #c00 !default;
     }
   }
 }
+
+.bcdReport.bcdStickyTable { border-collapse: separate; border: none;}
+.bcdStickyTable {
+  position: relative;
+  &.bcdStickyHead thead { z-index: 102; position: sticky; top: 0;}
+  &.bcdStickyFoot tfoot { z-index: 102; position: sticky; bottom: 0; }
+  &.bcdStickyFirstRow tbody tr:first-child { z-index: 102; position: sticky; }
+  &.bcdStickyLastRow tbody tr:last-child { z-index: 102; position: sticky; }
+  &.bcdStickyFirstColumn {
+    tfoot tr, thead tr { *:first-child { z-index: 102; position: sticky; left: 0; } }
+    tbody tr *:first-child { z-index: 100; position: sticky; left: 0; }
+  }
+  &.bcdStickyLastColumn {
+    tfoot tr, thead tr { *:last-child { z-index: 102; position: sticky; right: 0; } }
+    tbody tr *:last-child { z-index: 100; position: sticky; right: 0; }
+  }
+  .bcdStickyNthRow,
+  tfoot .bcdStickyNthCol,
+  thead .bcdStickyNthCol { z-index: 102; position: sticky; }
+  tbody .bcdStickyNthCol { z-index: 100; position: sticky; }
+}
